# TodoApp

./: README.md  pyproject.toml
TodoApp/: alembic.ini  database.py  init_dbs.sql  links.json  main.py  models.py  schemas.py  test_async_code.py  todos.db
TodoApp/db_migrations/: env.py
TodoApp/db_migrations/versions/: 048505748a31_create_address_for_users_table.py  5a5d2b5548d1_change_phone_number_type_to_number_.py  720699f84474_create_phone_number_for_users_table.py
TodoApp/pgdata/: postmaster.pid
TodoApp/pgdata/base/1/: 2619  2619_vm  2696  2840  2841  pg_internal.init
TodoApp/pgdata/base/16384/: 1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13370  13370_fsm  13370_vm  13374  13375  13375_fsm  13375_vm  13379  13380  13380_fsm  13380_vm  13384  13385  13385_fsm  16412  16413  16419  16421  16423  16425  16426  16427  16432  16433  16440  2187  2224  2579  (+153 more)
TodoApp/pgdata/base/5/: pg_internal.init
TodoApp/pgdata/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
TodoApp/pgdata/pg_xact/: 0000
TodoApp/routers/: admin.py  auth.py  todos.py  users.py
api/: main.py
